--- a/style.css
+++ b/style.css
@@ -26,8 +26,16 @@ body {
 	align-items: center;
 	height: 100vh;
 	font-family: var(--fontIBM);
+	background-color: #3c3ce3;
+	/* color: #fff;
 	background-color: #ee5522;
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23d23d09' fill-opacity='0.78'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.78'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E");
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23d23d09' fill-opacity='0.78'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.78'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E"); */
+}
+
+h1 {
+	color: #fff;
+	margin-bottom: 1rem;
+	text-transform: uppercase;
 }
 
 .container {
@@ -35,63 +43,61 @@ body {
 	min-height: 80vh;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	border: 3px solid #fff;
-}
-
-.input-container {
-	min-width: 20rem;
-	min-height: 4rem;
-	margin-bottom: 2rem;
-	position: relative;
-}
-
-#input-mail {
-	min-width: 100%;
-	min-height: 100%;
-	background-color: inherit;
-	border-radius: 10px;
-	outline: none;
-}
-
-.label-mail {
-	position: absolute;
-	top: 5px;
-	left: 5px;
-	color: #fff;
-}
-
-.btn-container{
-	min-width: 20rem;
-	min-height: 4rem;
-}
-
-.btn {
-	width: 100%;
-	height: 100%;
-	border-radius: 1rem;
+	justify-content: flex-start;
+	flex-wrap: wrap;
 	border: 2px solid #fff;
-	cursor: pointer;
-	background-color: inherit;
-	color: #fff;
+	border-radius: 1rem;
+	box-shadow: 8px 8px 12px rgba(255, 255, 255, 0.5);
 }
 
-.btn:hover {
-	color: orange;
-	background-color: #fff;
+p {
+	margin: .5rem;
+	padding-left: 1rem;
+	font-size: 2rem;
+	color: #fff;
+	font-family: var(--fontIBM);
+}
+
+p.temp {
+	color: #f00;
 	font-weight: bold;
 }
 
-#text-area {
+
+.time-box {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: .5rem;
+	min-width: 80%;
+	min-height: 6vh;
+	background-color: inherit;
+	border-radius: 1rem;
+	border: 1px solid #fff;
+}
+
+a {
+	color: #fff;
+	text-decoration: none;
+	font-size: 1.4rem;
 	margin-bottom: 1rem;
-	outline: none;
+	position: relative;
+	transition: color .3s linear, font-style .3s linear;
 }
 
-.fa-regular {
-	margin-right: 1rem;
+a::after {
+	content: '';
+	min-height: 2px;
+	position: absolute;
+	bottom: -4px;
+	left: -10px;
+	right: -10px;
+	background-color: #fff;
 }
 
-.dupa {
-	background-color: red;
+a:hover {
+	color: red;
+	font-style: italic;
 }
+
+
