--- a/style.css
+++ b/style.css
@@ -24,16 +24,14 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
+	min-height: 100vh;
 	font-family: var(--fontIBM);
-	background-color: #3c3ce3;
-	/* color: #fff;
-	background-color: #ee5522;
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23d23d09' fill-opacity='0.78'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.78'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E"); */
+	background-color: #040487;
 }
 
 h1 {
 	color: #fff;
+	margin-top: 1rem;
 	margin-bottom: 1rem;
 	text-transform: uppercase;
 }
@@ -43,7 +41,8 @@ h1 {
 	min-height: 80vh;
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
+	justify-content: space-evenly;
+	padding-left: 30rem;
 	flex-wrap: wrap;
 	border: 2px solid #fff;
 	border-radius: 1rem;
@@ -51,7 +50,7 @@ h1 {
 }
 
 p {
-	margin: .5rem;
+	margin: 0.5rem;
 	padding-left: 1rem;
 	font-size: 2rem;
 	color: #fff;
@@ -63,12 +62,11 @@ p.temp {
 	font-weight: bold;
 }
 
-
 .time-box {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-top: .5rem;
+	margin-top: 0.5rem;
 	min-width: 80%;
 	min-height: 6vh;
 	background-color: inherit;
@@ -82,7 +80,7 @@ a {
 	font-size: 1.4rem;
 	margin-bottom: 1rem;
 	position: relative;
-	transition: color .3s linear, font-style .3s linear;
+	transition: color 0.3s linear, font-style 0.3s linear;
 }
 
 a::after {
@@ -101,3 +99,36 @@ a:hover {
 }
 
 
+.container-history {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-wrap: wrap;
+	min-width: 80%;
+	min-height: 100vh;
+}
+
+
+
+.container-history p {
+	margin: 1rem;
+	font-size: .8rem;
+}
+.container-history span {
+	margin-top: 1rem;
+	font-size: 1.2rem;
+	font-family: var(--fontRoboto);
+	font-weight: bold;
+	color: #fff;
+}
+
+
+
+
+.weather-box {
+	width: 100%;
+	display: flex;
+	margin: .5rem;
+	border: 1px solid #fff;
+	color: #fff;
+}
