--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 	align-items: center;
 	min-height: 100vh;
 	font-family: var(--fontIBM);
-	background-color: #040487;
+	background-color: #ada3a3;
 }
 
 h1 {
